--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@mui/base": "^5.0.0-alpha.72",
+    "@mui/system": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
