--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/base": "^5.0.0-alpha.72",
     "@mui/system": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "html-react-parser": "^1.4.10",
     "moment": "^2.29.1",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-resize-module": "^3.0.0",
