--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "html-react-parser": "^1.4.10",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
