--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
